<resources>
    <string name="app_name">BunPyro</string>
    <string name="app_title_end">パイロ</string>
    <string name="common_ok">OK</string>
    <string name="common_cancel">Cancel</string>
    <string name="common_retry">Retry</string>
    <string name="common_grammarPoint_incomplete">Coming soon!</string>
    <string name="menu_search">Search</string>
    <string name="menu_settings">Settings</string>
    <string name="jlpt_n5">N5</string>
    <string name="jlpt_n4">N4</string>
    <string name="jlpt_n3">N3</string>
    <string name="jlpt_n2">N2</string>
    <string name="jlpt_n1">N1</string>
    <string name="jlptLong_n5">JLPT N5</string>
    <string name="jlptLong_n4">JLPT N4</string>
    <string name="jlptLong_n3">JLPT N3</string>
    <string name="jlptLong_n2">JLPT N2</string>
    <string name="jlptLong_n1">JLPT N1</string>
    <string name="apikey_hint">Api Key</string>
    <string name="apikey_start">Go</string>
    <string name="apikey_privacy">Privacy</string>
    <string name="apikey_intro_title">Welcome to BunPyro!</string>
    <string name="apikey_intro_text">This is a companion app for Bunpro, a website to learn Japanese grammar.\n\nTo use the app, you need a Bunpro account and its API key.\n\nThe API key is located at the bottom of the settings page of Bunpro.</string>
    <string name="apikey_intro_bunpro">Bunpro website</string>
    <string name="apikey_checking">Checking with Bunpro</string>
    <string name="apikey_welcome">Welcome, %s</string>
    <string name="apikey_check_error_network_title">Network error</string>
    <string name="apikey_check_error_network_text">Make sure your network is available and try again.</string>
    <string name="apikey_check_error_invalid_title">The API key is invalid</string>
    <string name="apikey_check_error_invalid_text">Make sure to copy paste it from Bunpro and try again.</string>
    <string name="apikey_check_error_unknown_title">Something went wrong on our side</string>
    <string name="apikey_check_error_unknown_text">Please try again in a few minutes.</string>
    <string name="firstsync_download_title">Downloading grammar data</string>
    <string name="firstsync_download_text">This can take a few minutes</string>
    <string name="firstsync_error_network_title">Network error</string>
    <string name="firstsync_error_network_text">Make sure your network is available and try again.</string>
    <string name="firstsync_error_unknown_title">Something went wrong on our side</string>
    <string name="firstsync_error_unknown_text">Please try again in a few minutes.</string>
    <string name="home_lessons_japanese">課</string>
    <string name="home_lessons_english">Lessons</string>
    <string name="home_allGrammar_japanese">文法</string>
    <string name="home_allGrammar_english">All grammar</string>
    <string name="home_reviews_japanese">復習</string>
    <string name="home_reviews_english">Reviews</string>
    <string name="home_reviews_ghost_japanese">幽霊</string>
    <string name="home_reviews_ghost_english">Ghosts</string>
    <string name="home_cram_japanese">一夜漬け</string>
    <string name="home_cram_english">Cram</string>
    <string name="home_progress_count">%1$d/%2$d</string>
    <string name="home_menu_sync">Sync data</string>
    <string name="home_menu_sync_reviews">Sync reviews</string>
    <string name="home_sync_warning_title">@string/home_menu_sync</string>
    <string name="home_sync_warning_message">The sync will take from 30s to several minutes and might use up to 5MB of data.\n\nThis will be done in background.</string>
    <string name="home_sync_warning_ok">Sync</string>
    <string name="home_sync_success">Sync success</string>
    <string name="home_sync_error">Sync error</string>
    <string name="lessons_coming_soon">Coming soon!</string>
    <string name="grammarPoint_tab_meaning_title">Meaning</string>
    <string name="grammarPoint_tab_examples_title">Examples</string>
    <string name="grammarPoint_tab_reading_title">Reading</string>
    <string name="grammarPoint_tab_meaning_structure">Structure</string>
    <string name="grammarPoint_tab_meaning_caution">Caution</string>
    <string name="grammarPoint_tab_meaning_nuance">Nuance</string>
    <string name="grammarPoint_tab_meaning_related">Related</string>
    <string name="grammarPoint_tab_meaning_review">Review</string>
    <string name="grammarPoint_tab_meaning_review_add">Add</string>
    <string name="grammarPoint_tab_meaning_review_remove">Remove</string>
    <string name="grammarPoint_tab_meaning_review_reset">Reset</string>
    <string name="grammarPoint_tab_examples_expand">Show more</string>
    <string name="grammarPoint_tab_examples_collapse">Show less</string>
    <string name="grammarPoint_tab_examples_copyJapanese">Copy Japanese</string>
    <string name="grammarPoint_tab_examples_copyEnglish">Copy English</string>
    <string name="grammarPoint_snackbar_japaneseCopied">Japanese text copied</string>
    <string name="grammarPoint_snackbar_englishCopied">English text copied</string>
    <string name="grammarPoint_snackbar_titleCopied">Text copied</string>
    <string name="grammarPoint_snackbar_reviewActionFailed_add">Could not add to reviews</string>
    <string name="grammarPoint_review_resetWarning_title">Reset reviews</string>
    <string name="grammarPoint_review_resetWarning_message">All review progress for this grammar point will be deleted.</string>
    <string name="grammarPoint_review_resetWarning_ok">Reset</string>
    <string name="srs_level">SRS %d</string>
    <string name="srs_notStudied">Not studied</string>
    <string name="srs_burned">Burned</string>
    <string name="action_furigana_show">Show furigana</string>
    <string name="action_furigana_hide">Hide furigana</string>
    <string name="allGrammar_title">All grammar</string>
    <string name="allGrammar_menu_filter">Filter</string>
    <string name="allGrammar_filterDialog_jlpt">JLPT</string>
    <string name="allGrammar_filterDialog_study">Study</string>
    <string name="allGrammar_filterDialog_studied">Studied</string>
    <string name="allGrammar_filterDialog_notStudied">Not studied</string>
    <string name="search_hint">English, 漢字, かな, romaji</string>
    <string name="search_header_count">%d found</string>
    <string name="contentDescription_navigateBack">Navigate Back</string>
    <string name="contentDescription_studiedHanko">Studied</string>
    <string name="contentDescription_appLogo">App Logo</string>
    <string name="contentDescription_more">More</string>
    <string name="contentDescription_audioControl">Audio control</string>
    <string name="contentDescription_review_next">Next</string>
    <string name="contentDescription_review_ignore">Ignore</string>
    <string name="contentDescription_review_ghost">Ghost review</string>
    <string name="contentDescription_review_precision">Precision</string>
    <string name="contentDescription_review_srs">SRS level</string>
    <string name="contentDescription_review_summary_correct">Correct</string>
    <string name="contentDescription_review_summary_incorrect">Incorrect</string>
    <string name="settings_root_title">Settings</string>
    <string name="settings_root_category_about">About</string>
    <string name="settings_root_about">About BunPyro</string>
    <string name="settings_root_licenses">Licenses</string>
    <string name="settings_root_privacy">Privacy</string>
    <string name="settings_root_debug">@string/settings_debug_title</string>
    <string name="settings_root_version">Version</string>
    <string name="settings_display_title">Display</string>
    <string name="settings_display_summary">Night mode, furigana, stamps</string>
    <string name="settings_display_nightMode">Night mode</string>
    <string name="settings_display_nightMode_always">Always (Dark Mode)</string>
    <string name="settings_display_nightMode_never">Never (Light Mode)</string>
    <string name="settings_display_nightMode_system">Same as system</string>
    <string name="settings_display_furiganaDefault">Furigana</string>
    <string name="settings_display_furiganaDefault_shown">Shown by default</string>
    <string name="settings_display_furiganaDefault_hidden">Hidden by default</string>
    <string name="settings_display_exampleDetails">Example details</string>
    <string name="settings_display_exampleDetails_shown">Shown by default</string>
    <string name="settings_display_exampleDetails_hidden">Hidden by default</string>
    <string name="settings_display_hankoDisplay">Studied stamp</string>
    <string name="settings_display_hankoDisplay_normal">Normal</string>
    <string name="settings_display_hankoDisplay_level">SRS level</string>
    <string name="settings_display_reviewHintLevel">Review hint level</string>
    <string name="settings_display_reviewHintLevel_hide">Hide</string>
    <string name="settings_display_reviewHintLevel_hint">Hint</string>
    <string name="settings_display_reviewHintLevel_more">More</string>
    <string name="settings_display_reviewHintLevel_show">Show</string>
    <string name="settings_review_title">Review</string>
    <string name="settings_review_summary">Bunny mode, audio, anki mode</string>
    <string name="settings_review_bunnyMode">Bunny mode</string>
    <string name="settings_review_bunnyMode_summary">Go to the next question instantly.</string>
    <string name="settings_review_audio_autoPlay">Auto play audio</string>
    <string name="settings_review_audio_autoPlay_summary">Autoplay sentence audio in reviews.</string>
    <string name="settings_review_ankiMode">Anki mode</string>
    <string name="settings_review_ankiMode_summary">Avoid typing answers by validating them manually.</string>
    <string name="settings_user_title">User</string>
    <string name="settings_notifications_reviews">Reviews notifications</string>
    <string name="settings_notifications_reviews_osSettings">Device settings (on/off, priority, sound, …)</string>
    <string name="settings_notifications_reviews_threshold_title">Threshold</string>
    <string name="settings_notifications_reviews_refresh_title">Refresh rate</string>
    <string name="settings_notifications_reviews_refresh_summary">Check for reviews every %s</string>
    <string name="settings_debug_mock">Mock</string>
    <string name="settings_debug_forceSub">Mock subscription</string>
    <string name="settings_debug_clearGrammarEtag">Clear grammar etag</string>
    <string name="settings_debug_clearReviewEtag">Clear review etag</string>
    <string name="settings_debug_notification_reviews">Send reviews notification</string>
    <string name="about_intro">BunPyro is a companion application for Bunpro, the website to learn Japanese grammar.</string>
    <string name="about_checkBunpro">Check BunPro</string>
    <string name="about_dev_text">Developed by Matthieu Esnault.</string>
    <string name="about_dev_website">Personal Website</string>
    <string name="about_api">"I want to have reviews, cram sessions, paths, everything working offline in BunPyro. However, I can't develop this using the current API. If you're interested in these features, make sure to tell the Bunpro team to improve their API!"</string>
    <string name="about_affiliation">"This app is a personal project that is not affiliated, associated, authorized, endorsed by or in any way officially connected to Bunpro."</string>
    <string name="about_sources_text">"The source code of BunPyro is available on Github. Feel free to take a look."</string>
    <string name="about_sources_action">Source code</string>
    <string name="reviews_init_loading_title">Loading reviews</string>
    <string name="reviews_init_error_reviewsFetch_title">Failed to load reviews</string>
    <string name="reviews_noReviews_title">No reviews</string>
    <string name="reviews_noReviews_message">Congratulations! 🎉</string>
    <string name="reviews_noReviews_nextReview">Next review:\n%s</string>
</resources>