<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <SwitchPreference
        app:defaultValue="false"
        app:key="debug_mock"
        app:title="@string/settings_debug_mock"
        />

    <ListPreference
        app:defaultValue="actual"
        app:entries="@array/debug_forceSub_values"
        app:entryValues="@array/debug_forceSub_values"
        app:key="debug_forceSub"
        app:title="@string/settings_debug_forceSub"
        />

    <Preference
        app:key="debug_clearGrammarEtag"
        app:title="@string/settings_debug_clearGrammarEtag"
        />

    <Preference
        app:key="debug_clearReviewEtag"
        app:title="@string/settings_debug_clearReviewEtag"
        />

    <Preference
        app:key="debug_notification_reviews"
        app:title="@string/settings_debug_notification_reviews"
        />

</PreferenceScreen>
