<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search_24dp"
        android:title="@string/menu_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView"
        tools:ignore="AlwaysShowAction"
        />

    <item
        android:id="@+id/settings"
        android:title="@string/menu_settings"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/sync"
        android:title="@string/home_menu_sync"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/syncReviews"
        android:title="@string/home_menu_sync_reviews"
        app:showAsAction="never"
        />

</menu>
