<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/noReviews_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:maxWidth="@dimen/text_max_width"
        android:text="@string/reviews_noReviews_title"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        />

    <TextView
        android:id="@+id/noReviews_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:maxWidth="@dimen/text_max_width"
        android:text="@string/reviews_noReviews_message"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        />

    <TextView
        android:id="@+id/noReviews_nextReview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:maxWidth="@dimen/text_max_width"
        android:text="@string/reviews_noReviews_nextReview"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        android:visibility="gone"
        tools:visibility="visible"
        />

</LinearLayout>
