<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarLayout.Colored"
        >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/Widget.App.Toolbar.Colored"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/settings_root_about"
            >

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_start"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="16dp"
                />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_end"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="vertical"
                app:layout_constraintGuide_end="16dp"
                />

            <TextView
                android:id="@+id/intro_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/about_intro"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                app:layout_constraintEnd_toEndOf="@+id/guideline_end"
                app:layout_constraintStart_toStartOf="@+id/guideline_start"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_max="@dimen/text_max_width"
                />

            <Button
                android:id="@+id/bunpro_button"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_checkBunpro"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/intro_text"
                />

            <TextView
                android:id="@+id/affiliation_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/about_affiliation"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                app:layout_constraintEnd_toEndOf="@+id/guideline_end"
                app:layout_constraintStart_toStartOf="@+id/guideline_start"
                app:layout_constraintTop_toBottomOf="@+id/bunpro_button"
                app:layout_constraintWidth_max="@dimen/text_max_width"
                />

            <View
                android:id="@+id/intro_divider"
                android:layout_width="144dp"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:alpha="0.1"
                android:background="?colorOnSurface"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/affiliation_text"
                />

            <TextView
                android:id="@+id/dev_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/about_dev_text"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                app:layout_constraintEnd_toEndOf="@+id/guideline_end"
                app:layout_constraintStart_toStartOf="@+id/guideline_start"
                app:layout_constraintTop_toBottomOf="@+id/intro_divider"
                app:layout_constraintWidth_max="@dimen/text_max_width"
                />

            <Button
                android:id="@+id/dev_button"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_dev_website"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dev_text"
                />

            <TextView
                android:id="@+id/api_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/about_api"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                app:layout_constraintEnd_toEndOf="@+id/guideline_end"
                app:layout_constraintStart_toStartOf="@+id/guideline_start"
                app:layout_constraintTop_toBottomOf="@+id/dev_button"
                app:layout_constraintWidth_max="@dimen/text_max_width"
                />

            <View
                android:id="@+id/dev_divider"
                android:layout_width="144dp"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:alpha="0.1"
                android:background="?colorOnSurface"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/api_text"
                />

            <TextView
                android:id="@+id/sources_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/about_sources_text"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                app:layout_constraintEnd_toEndOf="@+id/guideline_end"
                app:layout_constraintStart_toStartOf="@+id/guideline_start"
                app:layout_constraintTop_toBottomOf="@+id/dev_divider"
                app:layout_constraintWidth_max="@dimen/text_max_width"
                />

            <Button
                android:id="@+id/sources_button"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_sources_action"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sources_text"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</LinearLayout>
