<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".android.screen.firstsync.FirstSyncFragment"
    >

    <androidx.constraintlayout.widget.Group
        android:id="@+id/downloading_group"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="visible"
        app:constraint_referenced_ids="downloading_title,downloading_progress,downloading_text"
        tools:visibility="visible"
        />

    <TextView
        android:id="@+id/downloading_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:gravity="center_horizontal"
        android:text="@string/firstsync_download_title"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toTopOf="@+id/downloading_progress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintWidth_max="300dp"
        />

    <ProgressBar
        android:id="@+id/downloading_progress"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        app:layout_constraintBottom_toTopOf="@+id/downloading_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/downloading_title"
        />

    <TextView
        android:id="@+id/downloading_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:text="@string/firstsync_download_text"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/downloading_progress"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintWidth_max="300dp"
        />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/error_group"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:constraint_referenced_ids="error_text,error_subtext,error_button"
        tools:visibility="gone"
        />

    <TextView
        android:id="@+id/error_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/firstsync_error_network_title"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toTopOf="@+id/error_subtext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintWidth_max="300dp"
        />

    <TextView
        android:id="@+id/error_subtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        android:text="@string/firstsync_error_network_text"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toTopOf="@+id/error_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/error_text"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintWidth_max="300dp"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/error_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/common_retry"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/error_subtext"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
