<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:id="@+id/loading_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:visibility="visible"
        >

        <TextView
            android:id="@+id/loading_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="center_horizontal"
            android:maxWidth="@dimen/text_max_width"
            android:text="@string/reviews_init_loading_title"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            />

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/loading_progress"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/error_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="gone"
        >

        <TextView
            android:id="@+id/error_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="center_horizontal"
            android:maxWidth="@dimen/text_max_width"
            android:text="@string/reviews_init_error_reviewsFetch_title"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/error_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/common_retry"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loading_title"
            />

    </LinearLayout>

</FrameLayout>
